[package]
name = "websocket2socketcan"
version = "0.1.0"
authors = ["jalal <jalalhosseiny@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socketcan = "1.7.0"
log = "0.4.14"
env_logger = "0.8.3"
serde = { version = "1.0.123", featuers = ["derive"] }
serde_json = "1.0.64"
serde_derive = "1.0.123"
tokio = { version = "1.2.0", features = ["full"] }
tungstenite = "0.13.0"
futures-util = "0.3.13"
futures-channel = "0.3.13"
tokio-tungstenite = "0.14.0"
tokio-socketcan = "0.3.0"
